kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    environment: production
